Send notification to everyone in SUSE Manager
Signed-off-by: Miguel Sama <miguel.sama@suse.com>