@@ -56,6 +56,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.TreeMap;
 
 import javax.xml.stream.XMLStreamException;
@@ -168,7 +169,7 @@ public class DailySummary extends RhnJavaJob {
                     UserNotificationFactory.createNotificationMessage(
                             new PaygNotCompliantWarning());
             UserNotificationFactory.storeNotificationMessageFor(notificationMessage,
-                    Collections.singleton(RoleFactory.ORG_ADMIN), Optional.empty());
+                    Set.of(), Optional.empty()); // This notification will be sent to everyone
         }
     }
 
